hphp/hack/test/typecheck/new_inference/eager_solve/lambda_prop_this.php.like_types.exp
File "lambda_prop_this.php", line 26, characters 7-48:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
